# tcm-constitution-portfolio

./: .gitignore  README.md
research/tcm-constitution-data-sources/: DOWNLOADABLE-DATA.md  ONE_PAGE_PITCH.md  ONE_PAGE_PITCH_EN.md  ONE_PAGE_PITCH_ZH.md  PORTFOLIO-DESIGN.md  QUICK-REFERENCE.md  README.md  outreach-templates.md
tcm-constitution-portfolio/: .gitignore  README.md
tcm-constitution-portfolio/apps/web/: package-lock.json  (+1 more)
tcm-constitution-portfolio/python/: README.md  pyproject.toml
tcm-constitution-portfolio/python/docs/: MENDELEY_DATA_DICTIONARY.md
tcm-constitution-portfolio/python/notebooks/: 01_eda_mendeley.ipynb  02_reproduce_su2019.ipynb
tcm-constitution-portfolio/python/notebooks/.ipynb_checkpoints/: 01_eda_mendeley-checkpoint.ipynb
tcm-constitution-portfolio/python/notebooks/output/: mendeley_inventory.csv  primary_type_counts.csv  top_correlations.csv
tcm-constitution-portfolio/python/scripts/: download_data.sh  run_eda_mendeley.py
tcm-constitution-portfolio/python/src/tcm_constitution/: __init__.py
tcm-constitution-portfolio/python/src/tcm_constitution/adapters/: __init__.py  mendeley_274.py
tcm-constitution-portfolio/python/src/tcm_constitution/api/: main.py
tcm-constitution-portfolio/python/src/tcm_constitution/ccmq/: __init__.py  items.json  scoring.py
tcm-constitution-portfolio/python/src/tcm_constitution/models/: __init__.py  mendeley_baseline.py
tcm-constitution-portfolio/python/src/tcm_constitution/viz/: __init__.py  eda.py
tcm-constitution-portfolio/python/tests/: test_mendeley_adapter.py  test_scoring.py
(+4 files in other folders)
