[project]
name = "tcm-constitution-core"
version = "0.1.0"
description = "CCMQ scoring and ML core for TCM constitution portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "pyreadstat>=1.2.7",
  "scikit-learn>=1.5.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]
notebooks = [
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "jupyter>=1.0.0",
  "xlrd>=2.0.0",
  "openpyxl>=3.1.0",
]

[project.scripts]
tcm-api = "tcm_constitution.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcm_constitution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
